# bonfire-escrow

./: CHANGELOG.md  bonfire-escrow.cabal  cabal.project
app/: EscrowValidator.hs  ScriptCompiler.hs  writeEscrowValidator.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: EscrowValidator.hs
