cabal-version:      2.4
name:               bonfire-escrow
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Piotr Napierala
maintainer:         piotr.napierala94@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable bonfire-escrow
    main-is:          EscrowValidator.hs

    -- Modules included in this executable, other than Main.
    other-modules:    ScriptCompiler

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.7 && <5
    hs-source-dirs:   app
    default-language: Haskell2010
