cabal-version:      2.4
name:               bonfire-escrow
version:            0.1.0.0
description: This is a POC of escrow contract for Bonfire 
             (scheduling dApp)

license:            Apache-2.0
license-file:       LICENSE
author:             Piotr Napierala
maintainer:         piotr.napierala94@gmail.com

extra-source-files: CHANGELOG.md

library 
    hs-source-dirs:  src
    exposed-modules: EscrowValidator,
                     ScriptCompiler
    build-depends:   base >=4.7 && <5,
                     plutus-tx,
                     plutus-tx-plugin,
                     plutus-ledger,
                     plutus-ledger-api,
    default-language: Haskell2010

executable bonfire-escrow
    main-is:       writeEscrowValidator.hs
    hs-source-dirs: app
    build-depends: base >=4.7 && <5,
                   bonfire-escrow
   default-language: Haskell2010
